--- a/package.json
+++ b/package.json
@@ -37,15 +37,19 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@types/mysql": "^2.15.19",
     "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
+    "sync-sql": "^1.0.2",
     "ts-loader": "^9.2.5",
     "winston": "^3.3.3"
   }
