--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.22.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -44,7 +46,7 @@
     "joi": "^17.4.2",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
-     "ts-loader": "^9.2.5",
+    "ts-loader": "^9.2.5",
     "winston": "^3.3.3"
   }
 }
